# picoTestProject

./: CMakeLists.txt  README.md
FreeRTOS/: FreeRTOSConfig.h
main/: AT.c  AT.h  board.c  board.h  flash.c  flash.h  main.c  pio_spi.c  pio_spi.h  spi_slave.pio
usb_hid/: hid.c  hid.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
